## autoconf configure.ac && autoreconf -if

AC_PREREQ([2.69])
AC_INIT([pbdDMAT], [0.2-4])
AC_CONFIG_SRCDIR([src/sparse_utils.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
#AC_CHECK_FUNCS([sqrt])

#AC_CONFIG_SUBDIRS([src/sunbathe])
AC_OUTPUT(src/Makevars)
